# Hackathon_2_Phase_1_to_5

./: .gitignore
phase_I/: QWEN.md  README.md
phase_I/src/: todo_app.py
phase_II/: CLAUDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  package-lock.json  test.db  test_agents.py
phase_II/.claude/: settings.local.json
phase_II/backend/: pyproject.toml  requirements.txt  test.db  verify_milestone1.py
phase_II/backend/src/: config.py  main.py
phase_II/backend/src/agent/: todo_agent.py
phase_II/backend/src/auth/: jwt_handler.py
phase_II/backend/src/db/: __init__.py  database.py
phase_II/backend/src/models/: __init__.py  task.py  user.py
phase_II/backend/src/routers/: __init__.py
phase_II/backend/src/schemas/: __init__.py
phase_II/backend/src/services/: db_task_manager.py
phase_II/backend/tests/: test_auth.py  test_models.py  test_tasks.py
phase_II/data/: tasks.json
phase_II/frontend/: package-lock.json
phase_II/specs/: overview.md  plan.md
phase_III/.claude/: settings.local.json
phase_III/backend/: .env.example  create_tables.py  requirements.txt  test.db  verify_milestone3.py
phase_III/frontend/: package-lock.json  package.json
phase_IV/: .dockerignore  CLAUDE.md  QUICK_START.md  README_local_backup.md  frontend_backend _run_commands.txt  readme.txt  spec.md  test_agents.py
phase_IV/.claude/: settings.local.json
phase_IV/backend/: DOCKERFILE_OPTIMIZATION.md  Dockerfile  create_tables.py  test.db  (+3 more)
phase_V/: .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Readme_how_to_run.txt  constitution.md  spec.md
(+213 files in other folders)
